--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ def spockVersion = '0.7-groovy-2.0'
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.1.9'
 
-    compile 'org.springframework:spring-core:3.2.1.RELEASE'
+    //compile 'org.springframework:spring-core:3.2.1.RELEASE'
     compile "org.springframework:spring-context:$springVersion"
 
     compile "org.springframework:spring-jdbc:$springVersion"
@@ -25,33 +25,30 @@ dependencies {
 
     compile 'org.springframework:spring-orm:3.2.1.RELEASE'
     compile 'org.springframework.data:spring-data-jpa:1.4.2.RELEASE'
-    compile 'org.springframework.data:spring-data-commons-core:1.4.0.RELEASE'
+    //compile 'org.springframework.data:spring-data-commons-core:1.4.0.RELEASE'
 
     compile 'log4j:log4j:1.2.16'
 
 
     runtime "com.h2database:h2:1.3.172"
 
-    compile 'org.hamcrest:hamcrest-library:1.3'
-    compile 'org.hamcrest:hamcrest-core:1.3'
+    //compile 'org.hamcrest:hamcrest-library:1.3'
+    //  compile 'org.hamcrest:hamcrest-core:1.3'
     // compile 'com.mysema.querydsl:querydsl-jpa:2.9.0'
-    compile 'com.mysema.querydsl:querydsl-jpa:3.2.4'
-    compile 'com.mysema.querydsl:querydsl-core:3.2.4'
-    compile 'com.mysema.querydsl:querydsl-sql:3.2.4'
+    // compile 'com.mysema.querydsl:querydsl-jpa:3.2.4'
+    //   compile 'com.mysema.querydsl:querydsl-core:3.2.4'
+    //  compile 'com.mysema.querydsl:querydsl-sql:3.2.4'
 
-
-    runtime "org.slf4j:slf4j-nop:1.7.5"
+    // runtime "org.slf4j:slf4j-nop:1.7.5"
     // runtime "org.slf4j:slf4j-api:1.7.5"
     runtime "org.slf4j:jcl-over-slf4j:1.7.1"
     runtime "ch.qos.logback:logback-classic:1.0.6"
     compile 'org.springframework:spring-tx:3.2.1.RELEASE'
     compile 'org.springframework.data:spring-data-jpa:1.3.0.RELEASE'
 
-
-
-    compile 'com.mysema.querydsl:querydsl-jpa:2.9.0'
-    compile 'org.springframework:spring-beans:3.2.1.RELEASE'
-    compile 'org.springframework:spring-aop:3.2.1.RELEASE'
+    //  compile 'com.mysema.querydsl:querydsl-jpa:2.9.0'
+    // compile 'org.springframework:spring-beans:3.2.1.RELEASE'
+    // compile 'org.springframework:spring-aop:3.2.1.RELEASE'
 
     compile 'org.hibernate:hibernate-validator:5.0.1.Final'
 
@@ -65,5 +62,5 @@ dependencies {
     testCompile "org.springframework:spring-test:$springVersion"
     testCompile "org.spockframework:spock-core:$spockVersion"
     testCompile "org.spockframework:spock-spring:$spockVersion"
-    compile 'org.apache.ant:ant:1.9.2'
+    //compile 'org.apache.ant:ant:1.9.2'
 }
